1.0.0 - xxxx-xx-xx
--
* Add the Module class to use 'takes' initializers in classes.


0.2.12 - 2022-05-12
--
* Add some missing indexes to logs and queued tasks.


0.2.11 - 2022-04-01
--
* Fixed an issue with QueuedTask.queue calling [] on nil
* The above is also not a joke.


0.2.10 - 2022-04-01
--
* Added a null coalescing operator to #data in QueuedTask.queue.
* The above is not a joke.


0.2.9 - 2021-12-03
--
* Added Log#file to avoid a conditional in Log.
* Added a bounded requirement for the mysql2 gem, and bumped it to 0.5.3.


0.2.8 - 2021-11-19
--
* Added the QueuedTask#weight.
* Added the QueuedTask#attempts.
* Add a missing index on QueuedTask#locked.


0.2.7 - 2021-10-22
--
* Remove an unnecessary #puts call from the engine class' model preload.


0.2.6 - 2021-10-15
--
* Fix incompatibilities regarding the order in which files are required.


0.2.5 - 2021-10-15
--
* Added the QueuedTask model.


0.2.4 - 2021-10-15
--
* Added Plok::Engine.load_spec_supports to load in missing
spec/{support,factories}.rb files in projects.


0.2.3 - 2021-10-15
--
* Added RSpec configuration for the engine.
* Added Log.
* Added Plok::Loggable.


0.2.2 - 2021-10-04
--
* Make sure all unrouted HTTP variants are caught by the catch all route.


0.2.1 - 2021-10-01
--
* Fix issue with catch_all#resolve not providing enough parameters.


0.2.0 - 2021-09-27
--
* Add the catch_all#resolve action that's mapped to get '*path'


0.1.2 - 2021-09-24
--
* Explicitly require the version file.


0.1.1 - 2021-09-24
--
* Make the Rails dependency less strict.


0.1.0 - 2021-09-24
--
* Initialize repo.
* Make the rails dependency less strict.